Individual edit and delete links created, and functions nearly done.

--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,11 @@ Project Week 1
 #home > div > ul {
 	list-style-type: none;
 }
+
+#items [href]  {
+	margin-right: 10px;
+}
+
+#items ul {
+	list-style-type: none;
+}
